feat: add get and setters to `Answer` and `Questions` classes

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@types/node": "^24.10.1",
     "typescript": "^5.8.3",
     "vitest": "^3.2.3"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.19"
   }
 }
