--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@faker-js/faker": "^10.1.0",
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^24.10.1",
     "typescript": "^5.8.3",
